src/Domain/Compiler/Instruction/Assembly/Aarch/Tests/ImmediateInstructionEncoding/NegatedValue/__Baselines__/ImmediateInstructionEncoding_NegatedValue_32-MachO-Aarch64.error
error: Value exceeds max limit of 'u64'.
--> main.hs:7:16
  | 
7 |         return 0b1111_1111_1111_1111_0000_0000_0000_0000___1111_1111_1111_1111_1111_1111_1111_1111;}}
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
